              type(tg1) <> type(tg2)
           ) (Sandro Santilli)
  - #5536, comments are not anymore included in PostGIS extensions
    (Sandro Santilli)
  - xmllint is now required to build comments and
    (Sandro Santilli)
  - DocBook5 XSL is now required to build html documentation
    (Sandro Santilli)
  - #5602, Drop support for GEOS 3.6 and 3.7 (Regina Obe)

* New Features *

  - #5055, add explicit <> geometry operator to prevent non-unique
           error with <> and != (Paul Ramsey)
  - Add ST_HasZ/ST_HasM (Loïc Bartoletti)
  - GT-123, postgis_sfcgal: CG_YMonotonePartition, CG_ApproxConvexPartition, CG_GreeneApproxConvexPartition and CG_OptimalConvexPartition (Loïc Bartoletti)
  - GT-156, postgis_sfcgal: CG_Visibility (Loïc Bartoletti)
  - GT-157, postgis_sfcgal: Add ST_ExtrudeStraightSkeleton (Loïc Bartoletti)

* Enhancements *

  - #5531, documentation format upgraded to DocBook 5 (Sandro Santilli)
  - #5543, allow building without documentation (Sandro Santilli)


PostGIS 3.4.0
2023/08/15

This version requires PostgreSQL 12-16, GEOS 3.6 or higher, and Proj 6.1+.
To take advantage of all features, GEOS 3.12+ is needed.
To take advantage of all SFCGAL featurs, SFCGAL 1.4.1+ is needed.

Many thanks to our translation teams, in particular:

Teramoto Ikuhiro (Japanese Team)
Vincent Bre (French Team)

There are 2 new ./configure switches:

 -  --disable-extension-upgrades-install, will skip installing all the extension upgrade scripts except for the ANY--currentversion. If you use this, you can install select upgrades using the postgis commandline tool
 -  --without-pgconfig, will build just the commandline tools
    raster2pgsql and shp2pgsql even if PostgreSQL is not installed

* New Features *
  - #5055, complete manual internationalization (Sandro Santilli)
  - #5052, target version support in postgis_extensions_upgrade
    (Sandro Santilli)
  - #5306, expose version of GEOS at compile time (Sandro Santilli)