@@ -1,62 +1,62 @@
 scan_seq|Seq Scan
-5323|POINT(134.204197 130.674106)
 11208|POINT(126.522745 128.356924)
-27373|POINT(129.481991 125.755641)
-33863|POINT(127.143785 131.932614)
+19845|POINT(127.584643 134.083138)
+27373|POINT(125.017705 130.219927)
+33863|POINT(131.608071 127.468328)
 45851|POINT(130.986464 132.890625)
 scan_seq|Seq Scan
-5323|POINT(134.204197 130.674106)
 11208|POINT(126.522745 128.356924)
-27373|POINT(129.481991 125.755641)
-33863|POINT(127.143785 131.932614)
+19845|POINT(127.584643 134.083138)
+27373|POINT(125.017705 130.219927)
+33863|POINT(131.608071 127.468328)
 45851|POINT(130.986464 132.890625)
 scan_seq|Seq Scan
-5323|POINT(134.204197 130.674106)
 11208|POINT(126.522745 128.356924)
-27373|POINT(129.481991 125.755641)
-33863|POINT(127.143785 131.932614)
+19845|POINT(127.584643 134.083138)
+27373|POINT(125.017705 130.219927)
+33863|POINT(131.608071 127.468328)
 45851|POINT(130.986464 132.890625)
 scan_idx|Bitmap Heap Scan,Bitmap Index Scan
-5323|POINT(134.204197 130.674106)
 11208|POINT(126.522745 128.356924)
-27373|POINT(129.481991 125.755641)
-33863|POINT(127.143785 131.932614)
+19845|POINT(127.584643 134.083138)
+27373|POINT(125.017705 130.219927)
+33863|POINT(131.608071 127.468328)
 45851|POINT(130.986464 132.890625)
 scan_idx|Bitmap Heap Scan,Bitmap Index Scan
-5323|POINT(134.204197 130.674106)
 11208|POINT(126.522745 128.356924)
-27373|POINT(129.481991 125.755641)
-33863|POINT(127.143785 131.932614)
+19845|POINT(127.584643 134.083138)
+27373|POINT(125.017705 130.219927)
+33863|POINT(131.608071 127.468328)
 45851|POINT(130.986464 132.890625)
 scan_idx|Bitmap Heap Scan,Bitmap Index Scan
-5323|POINT(134.204197 130.674106)
 11208|POINT(126.522745 128.356924)
-27373|POINT(129.481991 125.755641)
-33863|POINT(127.143785 131.932614)
+19845|POINT(127.584643 134.083138)
+27373|POINT(125.017705 130.219927)
+33863|POINT(131.608071 127.468328)
 45851|POINT(130.986464 132.890625)
 scan_seq|Seq Scan
-5323|POINT(134.204197 130.674106)
 11208|POINT(126.522745 128.356924)
-27373|POINT(129.481991 125.755641)
-33863|POINT(127.143785 131.932614)
+19845|POINT(127.584643 134.083138)
+27373|POINT(125.017705 130.219927)
+33863|POINT(131.608071 127.468328)
 45851|POINT(130.986464 132.890625)
 scan_idx|Bitmap Heap Scan,Bitmap Index Scan
-5323|POINT(134.204197 130.674106)
 11208|POINT(126.522745 128.356924)
-27373|POINT(129.481991 125.755641)
-33863|POINT(127.143785 131.932614)
+19845|POINT(127.584643 134.083138)
+27373|POINT(125.017705 130.219927)
+33863|POINT(131.608071 127.468328)
 45851|POINT(130.986464 132.890625)
 scan_seq|Seq Scan
-5323|POINT(134.204197 130.674106)
 11208|POINT(126.522745 128.356924)
-27373|POINT(129.481991 125.755641)
-33863|POINT(127.143785 131.932614)
+19845|POINT(127.584643 134.083138)
+27373|POINT(125.017705 130.219927)
+33863|POINT(131.608071 127.468328)
 45851|POINT(130.986464 132.890625)
 scan_idx|Bitmap Heap Scan,Bitmap Index Scan
-5323|POINT(134.204197 130.674106)
 11208|POINT(126.522745 128.356924)
-27373|POINT(129.481991 125.755641)
-33863|POINT(127.143785 131.932614)
+19845|POINT(127.584643 134.083138)
+27373|POINT(125.017705 130.219927)
+33863|POINT(131.608071 127.468328)
 45851|POINT(130.986464 132.890625)
 scan_idx|Bitmap Heap Scan,Bitmap Index Scan
 2d|1
