@@ -1,21 +1,21 @@
 scan_idx|Seq Scan
-5323|POINT(134.204197 130.674106)
 11208|POINT(126.522745 128.356924)
-27373|POINT(129.481991 125.755641)
-33863|POINT(127.143785 131.932614)
+19845|POINT(127.584643 134.083138)
+27373|POINT(125.017705 130.219927)
+33863|POINT(131.608071 127.468328)
 45851|POINT(130.986464 132.890625)
 scan_seq|Index Scan
-5323|POINT(134.204197 130.674106)
 11208|POINT(126.522745 128.356924)
-27373|POINT(129.481991 125.755641)
-33863|POINT(127.143785 131.932614)
+19845|POINT(127.584643 134.083138)
+27373|POINT(125.017705 130.219927)
+33863|POINT(131.608071 127.468328)
 45851|POINT(130.986464 132.890625)
 &&|1|5+-5:true
-&&|2|907+-60:true
+&&|2|912+-60:true
 &&|3|12505+-500:true
 &&|4|50000+-600:true
 expr &&|1|5+-5:true
-expr &&|2|907+-60:true
+expr &&|2|912+-60:true
 expr &&|3|12505+-500:true
 expr &&|4|50000+-600:true
 _st_sortablehash|0|768602608280535040|768602608280535040
